<resources>
    <string name="app_name">Inconsistent Custom Permission Group Mapping</string>
    <string name="check_permission">Ask for Camera Permission</string>
    <string name="CameraPermissionName">Camera</string>
    <string name="FilePermissionName">Media File</string>
    <string name="SmsPermissionName">Sms</string>
    <string name="AccessGranted">Access Granted</string>
    <string name="AccessDenied">Access Denied</string>
    <string name="PermissionTitle"><u>Permissions Access List</u></string>
</resources>